Remove mardi gras and fix menu

--- a/public/views/event.html
+++ b/public/views/event.html
@@ -1,6 +1,6 @@
-<ui-gmap-google-map center="map.center" zoom="map.zoom" draggable=true options="options">
-  <!--<ui-gmap-marker idKey="testId" coords="coords"></ui-gmap-marker>-->
-</ui-gmap-google-map>
+<!-- <ui-gmap-google-map center="map.center" zoom="map.zoom" draggable=true options="options">
+  <ui-gmap-marker idKey="testId" coords="coords"></ui-gmap-marker>
+</ui-gmap-google-map> -->
 
 <div class="row inner" infinite-scroll="loadImages()" infinite-scroll-distance="1" infinite-scroll-disabled="busy">
 
@@ -20,3 +20,10 @@
 	</div>
 
 </div>
+
+<!-- <div ng-repeat="tweet in tweets">
+	<img src="{{tweet.profile_image}}" alt="">
+	<h3>{{tweet.username}}</h3>
+	<h5>{{tweet.text}}</h5>
+	<p>{{tweet.time}}</p>
+</div> -->
