Update server code for THON

--- a/public/views/event.html
+++ b/public/views/event.html
@@ -2,7 +2,8 @@
   <ui-gmap-marker idKey="testId" coords="coords"></ui-gmap-marker>
 </ui-gmap-google-map> -->
 
-<div class="row inner" infinite-scroll="loadImages()" infinite-scroll-distance="1" infinite-scroll-disabled="busy">
+<div class="row inner">
+<!--<div class="row inner" infinite-scroll="loadImages()" infinite-scroll-distance="1" infinite-scroll-disabled="busy">-->
 
 	<h2 class="headline">{{event}}</h2>
   <h3 class="headline" ng-show="headline">{{headline}}</h3>
