--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,6 +71,7 @@ body {
 .headline {
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 2.2%;
     width: 70%;
     text-align: center;
 }
